# ENPM662_robot_car_ros

./: README.md
assem3/: CMakeLists.txt  package.xml
assem3/config/: config_controllers.yaml  joint_names_assem3.yaml
assem3/launch/: display.launch  gazebo.launch  gazebo_bkp.launch
assem3/meshes/: base_link.STL  front_left_axle.STL  front_left_clamp.STL  front_left_wheel.STL  front_right_axle.STL  front_right_clamp.STL  front_right_wheel.STL  rear_axle.STL  rear_left_wheel.STL  rear_right_wheel.STL
assem3/urdf/: assem3.csv  assem3.urdf  assem3_bkp.urdf  assem3_integration.xacro  ydlidar.urdf
